mengubah file index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <h1>Hello World</h1>
     <p>Review Kembali git remote dari local</p>
+    <p>Semoga bisa terus konsisten belajarnya</p>
   </body>
 </html>
